--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,31 @@ android {
 }
 
 dependencies {
+    def room_version = "1.1.1"
+    def support_version = "28.0.0"
+    def dagger_version = "2.11"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:appcompat-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.0"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    implementation "com.jakewharton.threetenabp:threetenabp:1.0.5"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.code.gson:gson:2.8.2"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha' //maybe delete
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
+    kapt "android.arch.persistence.room:compiler:$room_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
