--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        
+        <activity android:name=".LauncherActivity"
                   android:theme="@style/AppTheme.StartTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -18,6 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity android:name=".MainActivity"
+                  android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
