--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.github.rtugeek:colorseekbar:1.7.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha' //maybe delete
 
